--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
+    "bcrypt": "^5.1.1",
     "cross-env": "^7.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "sequelize": "^6.33.0",
@@ -39,6 +41,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
