--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.10",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
