--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
